subprojects {
	group = 'com.beautify-project'
	version = '0.0.1-SNAPSHOT'

	apply plugin: 'java'

	sourceCompatibility = '17'

	repositories {
		mavenCentral()
	}
}
